# gst-plugin-cedar-cs

./: Makefile  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: README.Debian  README.source  changelog  control  copyright
src/: Makefile  Makefile.am  Makefile.in  gstcedarh264enc.c  gstcedarh264enc.h  h264enc.c  h264enc.h  libgstcedar_h264enc.la  libgstcedar_h264enc_la-gstcedarh264enc.lo  libgstcedar_h264enc_la-h264enc.lo
src/.deps/: libgstcedar_h264enc_la-gstcedarh264enc.Plo  libgstcedar_h264enc_la-h264enc.Plo  libgstcedar_h264enc_la-ve.Plo
